--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="dar">
 		<div>%sveltekit.body%</div>
+		
 	</body>
 </html>
